# CalHacks12.0

./: .dockerignore  .gitignore  Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  docker.env
backend/: alembic.ini  example.env  pyproject.toml  start_server.ps1  test_api.ps1
backend/alembic/: env.py
backend/alembic/versions/: 2025_10_24_2316-b18dab14b282_create_tasks_table_with_timestamps.py  2025_10_25_1029-edae03363bf4_add_neuri_models.py
backend/app/: config.py  fastapi_app.py  main.py  response_models.py  sentry.py
backend/app/api/: __init__.py
backend/app/api/categories/: __init__.py  router.py
backend/app/api/missions/: __init__.py  router.py
backend/app/api/rewards/: __init__.py  router.py
backend/app/api/routines/: __init__.py  router.py
backend/app/api/users/: router.py
backend/app/models/: __init__.py  base.py
backend/app/models/neuri/: model.py  request.py  schema.py
backend/app/repositories/: __init__.py  base.py  category.py  mission.py  reward.py  routine.py  task.py  user.py
backend/app/services/: __init__.py  category.py  mission.py  reward.py  routine.py  task.py  user.py
frontend/: app.json  eas.json  env.example  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: _layout.tsx
frontend/app/(tabs)/: _layout.tsx  explore.tsx  index.tsx  notes.tsx  onboarding.tsx  profile.tsx  schedule.tsx  voice.tsx
frontend/app/(tabs)/voice/: _layout.tsx  index.tsx
frontend/components/: ApiDebug.tsx  NotesComponent.tsx  OnboardingFlow.tsx  ScheduleComponent.tsx  SimpleVapiTest.tsx  StatusBarUI.tsx  VapiOnboarding.tsx  svg-paths.ts
frontend/components/ui/: icon-symbol.tsx
frontend/components/voice/: CelebrationConfetti.tsx  NoteCard.tsx  ReminderCard.tsx  RoutineCard.tsx  TaskCard.tsx  VoiceInterface.tsx  index.ts
frontend/config/: assistant-onboarding.ts  main-agent.ts  vapi-credentials.ts
frontend/hooks/: useCategories.ts  useComprehensiveContext.ts  useMissions.ts  useRewards.ts  useRoutines.ts  useScheduleData.ts  useTasks.ts  useUsers.ts
frontend/services/: api.ts  api_client.ts
frontend/types/: api.ts
myApp/: package.json  pnpm-lock.yaml
myApp/app/(tabs)/: index.tsx
myApp/services/: api.ts  api_client.ts
myApp/types/: api.ts
