[project]
name = "myapp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=1.63.2",
    "python-dotenv>=1.0.1",
    "requests>=2.32.3",
    "python-multipart>=0.0.20",
    "uvicorn>=0.34.0",
    "google-genai>=1.14.0",
    "alembic>=1.14.1",
    "pydantic-settings>=2.9.1",
    "asyncpg>=0.30.0",
    "aiofiles>=24.1.0",
    "boto3>=1.37.5",
    "sentry-sdk>=2.22.0",
    "posthog>=3.23.0",
    "pydantic[email]>=2.11.4",
    "fastapi[standard]>=0.115.13",
    "tenacity>=9.1.2",
    "pyjwt>=2.10.1",
    "passlib[bcrypt]>=1.7.4",
    "typer>=0.16.0",
    "pandas>=2.3.0",
    "httpx>=0.28.1",
]


[dependency-groups]
dev = [
    "black>=25.1.0",
    "ipykernel>=6.29.5",
    "ipython>=8.32.0",
    "matplotlib>=3.10.1",
    "mypy>=1.15.0",
    "pandas-stubs>=2.3.0.250703",
    "pre-commit>=4.1.0",
    "pyarmor>=9.1.1",
    "pylint-pydantic>=0.3.5",
    "pytest>=8.3.4",
    "ruff>=0.12.11",
    "ty>=0.0.1a20",
]

# [tool.ty.src]
# include = ["aralects/"]

# [tool.ty.environment]
# # extra-paths = ["./aralects"]
# root = ["backend"]
[tool.ruff]
# lint.ignore = ["E501"]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
extend-select = ["B", "E", "W", "PL"]


[tool.mypy]
plugins = "pydantic.mypy"

show_error_codes = true

disallow_any_unimported = false
disallow_any_expr = false
disallow_any_decorated = false
disallow_any_explicit = true
disallow_any_generics = true
disallow_subclassing_any = false

disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false

no_implicit_optional = true
no_implicit_reexport = true
strict_optional = true

warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unused_configs = true
warn_return_any = false
warn_unreachable = true

exclude = [
    '^bruno/*$',       # TOML literal string (single-quotes, no escaping necessary)
    "^notebooks/*$",   # TOML basic string (double-quotes, backslash and other characters need escaping)
    "^scripts/*$",
    "^hooks/*$",
    "^notebooks/*$",
    "^__pycache__/*$",
    "^venv/*$",
    "^build/*$",
]


[[tool.mypy.overrides]]
module = ["pipecat.*"]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = ["google.genai.*"]
follow_untyped_imports = true

[tool.pydantic-mypy]
init_forbid_extra = true
init_typed = true
warn_required_dynamic_aliases = true


[tool.pylint.messages_control]
max-line-length = 120
disable = [
    "missing-class-docstring",
    "missing-function-docstring",
    "invalid-name",
    "unspecified-encoding",
    "missing-module-docstring",
]
